gsap added and replaced all chrome exclusive css as well as fixed overflow issue with footer

--- a/src/footer.module.css
+++ b/src/footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    width: 99vw;
+    width: 97vw;
     padding-top: 200px;
     display: flex;
     flex-direction: column;
@@ -31,7 +31,7 @@
 }
 
 .footer__parallax h2 {
-    margin-left: 250vw;
+    margin-left: 100%;
     color: #fff;
     text-align: center;
     font-family: "Neue Montreal";
