--- a/src/products.module.css
+++ b/src/products.module.css
@@ -7,7 +7,7 @@
     max-width: 648px;
     color: var(--Snow-White, #fff);
     font-family: "Neue Montreal";
-    font-size: clamp(20px, 6vw, 40px);
+    font-size: clamp(20px, 5vw, 40px);
     font-style: normal;
     font-weight: 400;
     line-height: 160%; /* 64px */
@@ -80,19 +80,42 @@
 }
 
 @media only screen and (max-width: 1200px) {
-    .scroll_section_outer {
-        width: 100vw;
-    }
-
     .scroll_section_inner {
         flex-direction: column;
-        width: 100%;
+        width: 90%;
+        max-width: 100vw !important;
+    }
+
+    .scroll_section_outer {
+        max-width: 100vw;
     }
 
     .scroll_section {
         width: 100vw;
     }
+
+    .products > h2 {
+        margin-left: 24px;
+        margin-bottom: 24px;
+        max-width: 600px;
+    }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 680px) {
+    .scroll_section_inner {
+        max-width: 100vw !important;
+    }
+
+    .scroll_section_outer {
+        max-width: 100vw;
+    }
+
+    .scroll_section {
+        width: 100vw;
+    }
+
+    .products {
+        max-width: 100vw;
+        margin-inline: auto;
+    }
 }
